$Id: CHANGES,v 1.130 2001/08/13 16:17:52 stelian Exp $

Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
===================================================================

1.	Fixed the permissions of a newly created QFA file by dump.

2.	Cleaned up the source of dump (the external variables 
	definition was a complete mess, making possible to have
	objects overlap).

Changes between versions 0.4b22 and 0.4b23 (released July 20, 2001)
===================================================================

1.	Fixed a buffer overflow in restore/tape.c. Patch provided by
	Marcus Meissner (Caldera International Security Dept.).

2.	Implement the Sun rmt extended protocol. Patch submitted
	by Ian Gordon <iangordon@users.sourceforge.net>.

3.	Check for the e2fsprogs header <ext2fs/ext2_fs.h> instead of 
	the linux kernel header. This ensures that dump always has the
	latest version of this file. Patch submitted by
	Andreas Dilger <adilger@turbolinux.com>.

4.	Report any filesystem present in either /etc/fstab with a 
	positive passno or /etc/dumpdates in dump -w output.
	Patch submitted by Andreas Dilger <adilger@turbolinux.com>.

5.	Fixed the looping problem in dump introduced in the 
	previous version.

6.	Changed the -B option of dump to limit the size of 
	_compressed_ output per volume if compression is on.
	Patch contributed by Helmut Jarausch 
	<jarausch@igpm.rwth-aachen.de>. Note however that, since
	it is impossible to predict the size of the compressed
	data before doing the compression, the -B limit is a bit
	conservative.

7.	Fixed a bug in reading the operator typed file/tape path for
	the next volume in restore.

8.	Implemented a "-F script" option to restore which permits the
	user to specify a script which will be launched at the
	beginning of each tape, useful for automatic programming of
	tape changers for example. See the restore man page for the
	script parameters and return codes.
