@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.130 2001/08/13 16:17:52 stelian Exp $
+$Id: CHANGES,v 1.131 2001/08/14 13:11:58 stelian Exp $
 
 Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
 ===================================================================
@@ -8,6 +8,10 @@ Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
 2.	Cleaned up the source of dump (the external variables 
 	definition was a complete mess, making possible to have
 	objects overlap).
+
+3.	Fixed restore to use the full tape volume path when doing
+	a compare (since it changes the working directory to the
+	filesystem being compared in the process).
 
 Changes between versions 0.4b22 and 0.4b23 (released July 20, 2001)
 ===================================================================
